--- a/Main/views/layouts/dashboard.handlebars
+++ b/Main/views/layouts/dashboard.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Tech Blog</title>
+    <title>The Dashboard</title>
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap"
       rel="stylesheet"
@@ -13,32 +13,27 @@
 
   <body class="flex-column min-100-vh">
     <nav class="navbar">
-      <ul>
+      <ul class="flex-row">
         <li class="li-inline nav-item"><a href="/">Home</a></li>
         <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-        {{#if isLoggedOut}}
-          <li class="li-inline nav-item"><a href="/login">Login</a></li>
-        {{else}}
-          <li class="li-inline nav-item"><a
-              href="#"
-              id="logout-link"
-            >Logout</a></li>
-        {{/if}}
+        <li class="li-inline nav-item"><a
+            href="#"
+            id="logout-link"
+          >Logout</a></li>
       </ul>
     </nav>
     <header class="hero">
-      <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+      <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
     </header>
 
     <main class="col-auto">
       {{{body}}}
     </main>
 
-    <footer class="flex-row justify-center">
-      &copy; The Tech Blog Folks
+    <footer class="footer flex-row justify-center">
+      <a href="/dashboard/new">➕ New Post</a>
     </footer>
   </body>
-
 </html>
 
 <script src="/js/logout.js"></script>
