--- a/Main/views/edit-post.handlebars
+++ b/Main/views/edit-post.handlebars
@@ -1,18 +1,19 @@
 <div class="card">
-    <h3 class="card-header">Edit Post</h3>
-    <form class="card-body edit-post-form">
-        <label for="post-title" class="form-label">Title</label>
-        <input name="post-title" type="text" value="{{post.title}}" class="form-input" />
-
-
-        <label class="form-label" for="content">Content</label>
-        <input name="content" type="text" value="{{post.content}}" class="form-input" />
-
-        <button type="submit" class="btn">Update Post</button>
-        <button type="button" class="delete-post-btn btn">Delete Post</button>
-    </form>
+  <div class="card-header">
+    <h2>Login</h2>
+  </div>
+  <form id="login-form" class="card-body">
+    <div>
+      <label for="username-input-login">Username:</label>
+      <input type="text" id="username-input-login" />
+    </div>
+    <div>
+      <label for="password-input-login" class="form-label">Password:</label>
+      <input type="password" id="password-input-login" />
+    </div>
+    <button type="submit" id="login-id" class="btn">Login</button>
+    <a type="button" href="/signup">Sign up Instead!</a>
+  </form>
 </div>
 
-
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
+<script src="/js/login.js"></script>
