--- a/Main/views/partials/post-info.handlebars
+++ b/Main/views/partials/post-info.handlebars
@@ -1,7 +1,23 @@
-<div class="card">
-    <div class="card-header">
-        <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
-        <p>Posted by {{user.username}} on {{format_date created_at}}</p>
+
+
+<article class="post card">
+  <div class="card-header">
+    <div class="title">
+      {{title}}
     </div>
-        <p class="card-body">{{content}}</p>
-</div> 
+    <div class="meta">
+      Posted by
+      {{user.username}}
+      on
+      {{format_date date_created}}
+    </div>
+  </div>
+  <div class="card-body">
+    <div class="content">
+      {{contents}}
+    </div>
+    <div>
+      {{comments.length}}
+    </div>
+  </div>
+</article>
