--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
 
   <body class="flex-column min-100-vh">
