modified:   views/edit-post.handlebars         modified:   views/layouts/dashboard.handlebars         modified:   views/layouts/main.handlebars         modified:   views/login.handlebars         modified:   views/new-post.handlebars         modified:   views/signup.handlebars         modified:   views/single-post.handlebars         renamed:    README.md -> ../README.md

--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -41,6 +41,10 @@
     </footer>
   </body>
 
-</html>
+{{!-- {{#if loggedIn}} --}}
 
-<script src="/js/logout.js"></script>
+<script src="/javascript/logout.js"></script>
+
+{{!-- {{/if }} --}}
+
+</html>
